# ChronoType

./: .gitignore  CMakeLists.txt  README.md
include/: db.h  hook.h  server.h  tray.h
src/: db.cpp  hook.cpp  main.cpp  resource.rc  server.cpp  tray.cpp
ui/: index.html
